<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@raw/music_tile_small" />

            <Switch
                android:id="@+id/music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/music_tile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@raw/camera_tile_small" />

            <Switch
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/camera_tile" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="changePictureLocation"
            android:text="@string/change_picture_location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@raw/flashlight_tile_small" />

            <Switch
                android:id="@+id/flashlight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/flashlight_tile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@raw/tile_icon_small" />

            <Switch
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/message_tile" />
        </LinearLayout>

        <EditText
            android:id="@+id/smstitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text" />

        <EditText
            android:id="@+id/smsbody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/message_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@raw/barcode_tile_small" />

            <Switch
                android:id="@+id/barcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/barcode_tile" />
        </LinearLayout>

        <EditText
            android:id="@+id/barcode_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/barcode_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Spinner
                android:id="@+id/page_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/barcode_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/send" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/haptic_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0" />

            <Button
                android:id="@+id/haptic_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/send" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>